tests/paczka2/big_fuzzy/98644869.err
Error in line 1: ktHRk S449 0,6
Error in line 3: ZpGLMorQN S284 65,5
Error in line 16: AVw93MrlSjw A517 2,7
Error in line 13: XsHakDIgt2 S284 84,1
Error in line 19: XsHakDIgt2 S887 36,8
Error in line 24: qEtO A517 31,4
Error in line 28: #EtO A517 49,8
Error in line 22: XsHakDIgt2 S284 38,2
Error in line 27: qEtO S887 99,6
Error in line 26: 1qptGL S887 2,4
Error in line 32: 1qptGL S449 52,2
Error in line 44: S887 S449 48,9
Error in line 53: S887 S887 76,8
Error in line 51: ZpGLMorQN S449 83,7
Error in line 56: ZpGLMorQN S284 19,7
Error in line 70: 1qptGL S284 74,4
Error in line 79: qEtO S887 8,3
Error in line 87: 1qptGL A517 99,6
Error in line 84: S887 S284 98,6
Error in line 95: S887 S887 66,3
Error in line 104: 1qptGL S284 80,9
Error in line 116: 1qptGL S887 7,x
Error in line 117: AVw93MrlSjw S449 98,70
Error in line 119: ZpGLMorQN S449 55,16
Error in line 107: ktHRk S887 20,6
Error in line 112: AVw93MrlSjw A517 12,4
Error in line 130: AVw93MrlSjw S284 40,44
Error in line 129: qEtO S284 65,3
Error in line 124: AVw93MrlSjw S449 440,0
Error in line 138: XsHakDIgt2 A517 37,7
Error in line 140: XsHakDIgt2 S887 76,2
Error in line 134: qEtO S449 42,5
Error in line 137: AVw93MrlSjw S284 2,4
Error in line 143: AVw93MrlSjw S887 56,7
Error in line 142: qEtO S284 50,2
Error in line 106: 1qptGL S887 13,8
Error in line 147: 1qptGL A517 11,5
Error in line 125: S887 S449 65,8
Error in line 148: 1qptGL S449 78,2
Error in line 161: S887 S887 49,1
Error in line 162: 1qptGL A517 93,5
Error in line 165: 1qptGL S449 1,2
Error in line 170: XsHakDIgt2 A517 51,7
Error in line 176: XsHakDIgt2 S284 61,0
Error in line 178: XsHakDIgt2 A517 96,0
Error in line 198: AVw93MrlSjw S449 76,6
Error in line 202: XsHakDIgt2 S887 63,6
Error in line 207: qEtO S284 90,3
Error in line 238: AVw93MrlSjw S887 55,1
